--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "timer",
+  "name": "asad-timer",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
+  "bin":"/timer.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
