--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "type": "module",
-  "bin":"/timer.js",
+  "bin": "/timer.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.11.18",
+    "asad-timer": "^1.0.0",
     "inquirer": "^9.1.4"
   },
   "devDependencies": {
